// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Portal Default Story 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<portal-dummy>
  <p
    className="c0"
  >
    This element is moved to the bottom of the body tag
  </p>
</portal-dummy>
`;

exports[`Storyshots Atoms | Portal If Attach To Prop Is Not A Html Element Then Nothing Is Rendered 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<div
  id="origin"
>
  <portal-dummy>
    <p
      className="c0"
    >
      This element should not be rendered
    </p>
  </portal-dummy>
</div>
`;

exports[`Storyshots Atoms | Portal Portal To Specified Destination 1`] = `
<div
  id="destination"
/>
`;
